<resources>
    <string name="app_name">Notifications</string>
    <string name="notification_personalized">Notification Personalized</string>
    <string name="notification_normal">Notification Normal</string>
    <string name="title_text">Notification Title </string>
    <string name="hint_title">enter title</string>
    <string name="content_text">Notification Content</string>
    <string name="hint_content">enter content</string>
    <string name="show_notification">Show Notification</string>
    <!-- List icons name-->
    <string name="alert_notify">Alert </string>
    <string name="chat_notify">Chat </string>
    <string name="facebook_notify">Facebook</string>
    <string name="like_notify"> Like</string>
    <string name="new_friend_notify"> New Friend</string>
    <string name="new_message_notify">New Message</string>
</resources>
