<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/NotifyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Press an Icon" />

    <GridView
        android:id="@+id/icons_grid_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:columnWidth="120dp"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"></GridView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/NotifyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text" />

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_title"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/NotifyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_text" />

        <EditText
            android:id="@+id/content_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_content"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/show_notification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/show_notification"
        android:textAllCaps="false" />


</LinearLayout>